--- a/.eslintrc
+++ b/.eslintrc
@@ -13,9 +13,11 @@
       "sourceType": "module"
   },
   "plugins": [
-      "@typescript-eslint"
+      "@typescript-eslint",
+      "eslint-plugin-prettier"
   ],
   "rules": {
+    "@typescript-eslint/no-unused-vars": [2, { "args": "none" }]
   }
 }
 
