--- a/package.json
+++ b/package.json
@@ -15,35 +15,35 @@
     "lint": "eslint . --ext .ts"
   },
   "devDependencies": {
-    "@types/express": "^4.17.7",
-    "@types/mongoose": "^5.7.36",
-    "@typescript-eslint/eslint-plugin": "^4.11.0",
-    "@typescript-eslint/parser": "^4.11.0",
+    "@types/express": "^4.17.9",
+    "@types/mongoose": "^5.10.3",
+    "@typescript-eslint/eslint-plugin": "^4.11.1",
+    "@typescript-eslint/parser": "^4.11.1",
     "eslint": "^7.16.0",
     "eslint-config-airbnb-base": "^14.2.1",
-    "eslint-config-prettier": "^6.11.0",
-    "eslint-config-standard": "^14.1.1",
+    "eslint-config-prettier": "^7.1.0",
+    "eslint-config-standard": "^16.0.2",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-prettier": "^3.3.0",
     "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-standard": "^4.0.1",
-    "husky": "^4.2.5",
+    "eslint-plugin-standard": "^5.0.0",
+    "husky": "^4.3.6",
     "install": "^0.13.0",
-    "lint-staged": "^10.2.11",
-    "prettier": "^2.0.5",
-    "ts-node-dev": "^1.0.0-pre.56",
+    "lint-staged": "^10.5.3",
+    "prettier": "^2.2.1",
+    "ts-node-dev": "^1.1.1",
     "tslint": "^6.1.3",
-    "typescript": "^3.9.7"
+    "typescript": "^4.1.3"
   },
   "dependencies": {
-    "@typegoose/typegoose": "^7.3.2",
-    "@types/cors": "^2.8.7",
+    "@typegoose/typegoose": "^7.4.6",
+    "@types/cors": "^2.8.9",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "mongoose": "^5.9.28",
+    "mongoose": "^5.11.9",
     "reflect-metadata": "^0.1.13",
     "typegoose": "^5.9.1"
   },
