--- a/.prettierrc
+++ b/.prettierrc
@@ -1,11 +1,6 @@
 {
-  "useTabs": false,
-  "printWidth": 100,
-  "tabWidth": 2,
   "singleQuote": true,
-  "trailingComma": "none",
-  "jsxBracketSameLine": false,
-  "parser": "babel",
-  "arrowParens": "avoid",
-  "semi": false
+  "semi": false,
+  "tabWidth": 2,
+  "trailingComma": "all"
 }
